--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,17 @@
 
 .Header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.SearchBar{
+  padding: 20px;
 }
 
 .App-link {
