--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Actor&family=Cabin+Condensed&family=Courgette&family=Long+Cang&family=Philosopher:wght@700&family=Satisfy&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+  font-family: 'Actor', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Actor', sans-serif;
+    
 }
+
+/* source-code-pro, Menlo, Monaco, Consolas, */
